// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyzePlaceholders commentPlaceholder 1`] = `
Array [
  Object {
    "position": Object {
      "end": 158,
      "start": 134,
    },
    "raw": "{{ # This is a comment }}",
    "type": "comment",
    "value": "This is a comment",
  },
]
`;

exports[`analyzePlaceholders contentPlaceholder - text 1`] = `
Array [
  Object {
    "input": Object {
      "raw": "user.name.first",
      "value": "Thibaud",
    },
    "output": "thibaud",
    "pipes": Array [
      Object {
        "output": "thibaud",
        "raw": "lowercase",
      },
    ],
    "position": Object {
      "end": 166,
      "start": 134,
    },
    "raw": "{{ user.name.first | lowercase }}",
    "type": "content",
  },
]
`;

exports[`analyzePlaceholders unknownPlaceholder - reserved symbol 1`] = `
Array [
  Object {
    "position": Object {
      "end": 158,
      "start": 134,
    },
    "raw": "{{ % reserved symbol }}",
  },
]
`;

exports[`buildUpdates commentPlaceholder 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ # This is a comment }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - text 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ user.name.first }}",
      },
      "replaceText": "Thibaud",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - unknown 1`] = `Array []`;

exports[`buildUpdates unknownPlaceholder 1`] = `Array []`;

exports[`findPlaceholders multiple paragraphs with multiple placeholders 1`] = `
Array [
  Object {
    "position": Object {
      "end": 21,
      "start": 6,
    },
    "raw": "{{ user.name }}",
  },
  Object {
    "position": Object {
      "end": 64,
      "start": 37,
    },
    "raw": "{{movie.title | uppercase}}",
  },
  Object {
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{ movie.rating }}",
  },
]
`;

exports[`interpolate full document 1`] = `
Array [
  Object {
    "input": Object {
      "raw": "user.name",
      "value": "Thibaud",
    },
    "output": "Thibaud",
    "pipes": Array [],
    "position": Object {
      "end": 21,
      "start": 6,
    },
    "raw": "{{ user.name }}",
    "type": "content",
  },
  Object {
    "input": Object {
      "raw": "movie.title",
      "value": "Lost in Translation",
    },
    "output": "LOST IN TRANSLATION",
    "pipes": Array [
      Object {
        "output": "LOST IN TRANSLATION",
        "raw": "uppercase",
      },
    ],
    "position": Object {
      "end": 64,
      "start": 37,
    },
    "raw": "{{movie.title | uppercase}}",
    "type": "content",
  },
  Object {
    "input": Object {
      "raw": "movie.rating",
      "value": 5,
    },
    "output": 5,
    "pipes": Array [],
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{ movie.rating }}",
    "type": "content",
  },
]
`;
